# Dump

./: README  gtk-fullscreen.txt
Arduino/: arduino_serial_data.ino  python_plot_data
PCB/: ITEADstudio_CAM for Eagle6.x.cam  Orderlijst CNC.xlsx  opbouw_thuis.brd  sketch-cnc.skb  sketch-cnc.skp
PCB/BENDER/: BDNR.b#1  BDNR.b#2  BDNR.b#3  BDNR.b#4  BDNR.b#5  BDNR.b#6  BDNR.b#7  BDNR.b#8  BDNR.b#9  BDNR.brd  eagle.epf
PCB/NRF24_13K50/: eagle.epf  pic18f13k50.b#1  pic18f13k50.b#2  pic18f13k50.b#3  pic18f13k50.b#4  pic18f13k50.b#5  pic18f13k50.b#6  pic18f13k50.b#7  pic18f13k50.b#8  pic18f13k50.b#9  pic18f13k50.brd  pic18f13k50.s#1  pic18f13k50.s#2  pic18f13k50.s#3  pic18f13k50.s#4  pic18f13k50.s#5  pic18f13k50.s#6  pic18f13k50.s#8  pic18f13k50.s#9  pic18f13k50.sch  pic18f13k50_2.b#1  pic18f13k50_2.b#2  pic18f13k50_2.b#3  pic18f13k50_2.b#4  pic18f13k50_2.b#5  pic18f13k50_2.b#6  pic18f13k50_2.b#7  pic18f13k50_2.b#8  pic18f13k50_2.b#9  pic18f13k50_2.brd  pic18f13k50_2.s#1  pic18f13k50_2.s#2  pic18f13k50_2.s#3  pic18f13k50_2.s#4  pic18f13k50_2.s#5  pic18f13k50_2.s#6  pic18f13k50_2.s#7  pic18f13k50_2.s#8  pic18f13k50_2.s#9  pic18f13k50_2.sch  (+2 more)
PCB/inbouw_schakelaar/: bottom_copper.GBL  bottom_copper.gpi  drill.TXT  drill.dri  drill_boardoutline.do  drill_boardoutline.gpi  silk_bottom.GBO  silk_bottom.gpi  silk_top.GTO  silk_top.gpi  soldermask_bottom.GBS  soldermask_bottom.gpi  soldermask_top.GTS  soldermask_top.gpi  top_copper.GTL  top_copper.gpi  untitled_device.b#1  untitled_device.b#3  untitled_device.brd
PCB/lbr/: MRF24J40MA.lbr  austriamicrosystems 2.lbr  con-cypressindustries 2.l#1  con-cypressindustries 2.l#2  con-cypressindustries 2.l#3  con-cypressindustries 2.l#4  con-cypressindustries 2.l#5  con-cypressindustries 2.lbr  con-hirose 2.lbr  diode 2.lbr  eagle-ltspice.lbr  led.lbr  linear.l#1  linear.lbr  microchip-7.l#1  microchip-7.l#2  microchip-7.l#3  microchip-7.l#5  microchip-7.l#6  microchip-7.l#7  microchip-7.l#8  microchip-7.l#9  microchip-7.lbr  microchip-dspic.lbr  pic18f25k22.lbr  pinhead.l#1  pinhead.l#2  pinhead.lbr  qfm-trx1-24g.lbr  rcl.l#1  rcl.lbr  simmstik.lbr  special 2.lbr  tango.lbr  trafo-xicon.lbr
PCB/miwi_host/: HOST.GBO  HOST.GBS  HOST.GTL  HOST.GTO  HOST.GTS  HOST.b##  HOST.b#1  HOST.b#2  HOST.b#3  HOST.b#4  HOST.brd  HOST.gc  bottom_copper.GBL  bottom_copper.gpi  drill.TXT  drill.dri  drill_boardoutline.do  drill_boardoutline.gpi  eagle.epf  silk_bottom.GBO  silk_bottom.gpi  silk_top.gpi  soldermask_bottom.gpi  soldermask_top.gpi  top_copper.gpi
PCB/opbouw_schakelaar/: bottom_copper.GBL  bottom_copper.gpi  drill.TXT  (+28 more)
bookmarks/: bookmarks-2014-01-31.json  bookmarks.html
emiplib-1.1.1/emiplib-1.1.1/examples/: CMakeCache.txt  CMakeLists.txt  Makefile  avsession  cmake_install.cmake  libemip.1.dylib  libemip.dylib  pushtotalk2  simplechain  soundrecorder
emiplib-1.1.1/emiplib-1.1.1/src/jrtplib3/: CMakeLists.txt  Makefile  rtcppacket.cpp  rtcppacket.h  rtpmemorymanager.h  rtptransmitter.h
konference-0.1/: AUTHORS  Doxyfile  Makefile.in  TODO  acinclude.m4  aclocal.m4  configure  configure.in  configure.in.in  konference.kdevelop
konference-0.1/src/: Makefile.am  Makefile.in  konference.cpp  konference.desktop  konference.h  konference.kcfg  konference.lsm  konference_part.cpp  konference_part.desktop  konference_part.h  konference_part.rc  konference_shell.rc  main.cpp  settings.cpp  settings.kcfgc  videowidget.cpp  videowidget.h
konference-0.1/src/audio/: Makefile.am  Makefile.in  alsa.cpp  alsa.h  audioarts.cpp  audioarts.h  audiobase.cpp  audiobase.h  oss.cpp  oss.h
konference-0.1/src/codecs/: Makefile.am  Makefile.in  codecbase.cpp  codecbase.h  g711.cpp  g711.h  gsmcodec.cpp  gsmcodec.h  h263.cpp  h263.h  speexcodec.cpp  speexcodec.h
konference-0.1/src/codecs/gsm/: Makefile.am  Makefile.in  add.c  code.c  config.h  debug.c  decode.c  gsm.h  gsm_create.c  gsm_decode.c  gsm_destroy.c  gsm_encode.c  gsm_explode.c  gsm_implode.c  gsm_option.c  gsm_print.c  long_term.c  lpc.c  preprocess.c  private.h  proto.h  rpe.c  short_term.c  table.c  unproto.h
konference-0.1/src/dialogs/: Makefile.am  Makefile.in  dummy.cpp
konference-0.1/src/dialogs/config/: Makefile.am  Makefile.in  configaudiodlg.cpp  configaudiodlg.h  configaudiodlglayout.cpp  configaudiodlglayout.ui  configconnectiondlg.cpp  configconnectiondlg.h  configconnectiondlglayout.cpp  configconnectiondlglayout.ui  configdialog.cpp  configdialog.h  configpersonaldlg.cpp  configpersonaldlg.h  configpersonaldlglayout.cpp  configpersonaldlglayout.ui  configvideodlg.cpp  configvideodlg.h  configvideodlglayout.cpp  configvideodlglayout.ui  configviewdlg.cpp  configviewdlg.h  configviewdlglayout.cpp  configviewdlglayout.ui
konference-0.1/src/dialogs/wizard/: Makefile.am  Makefile.in  page1.cpp  page1.h  page1layout.cpp  page1layout.ui  page2.cpp  page2.h  page2layout.cpp  page2layout.ui  wizard.cpp  wizard.h
konference-0.1/src/rtp/: Makefile.am  Makefile.in  jitter.cpp  jitter.h  rtpaudio.cpp  rtpaudio.cpp_  rtpaudio.h  rtpaudio.h_  rtpbase.cpp  rtpbase.h  rtpvideo.cpp  rtpvideo.h
konference-0.1/src/sip/: Makefile.am  Makefile.in  md5digest.cpp  sipfsm.cpp  sipfsm.h  sipstack.cpp
konference-0.1/src/video/: Makefile.am  Makefile.in  webcambase.cpp  webcambase.h  webcamimage.cpp  webcamimage.h  webcamv4l.cpp  webcamv4l.h
nRF24L01/: hardware.h  main.c  nRF24L01-Driver-Smart-Radio.c  nRF24L01-Driver-Smart-Radio.h  nRF24L01-Smart-3.c  nRF24L01-Smart-3.cof  nRF24L01-Smart-3.hex  nRF24L01-Smart-3.map  nRF24L01-Smart-3.mcp  nRF24L01-Smart-3.mcs  nRF24L01-Smart-3.mcw  nRF24L01-Smart-3.mptags  nRF24L01-Smart-3.tagsrc
scripts/: build  chromeservice.sh  crapbach.sh  dpadback.sh  dpadcontextual.sh  dpaddown.sh  dpadenter.sh  dpadmenu.sh  dpadrotaryleft.sh  dpadup.sh  home.sh  info.py  keyboardservicesideloading.sh  list  mediasideloading.sh  memleak.txt  nextsource.sh  radiowakeup.sh  screenshotall.sh  serialonoff  servicesapp.sh  sideload  strasbourg-MMCAN-Radio.backup2  striptabs.txt  tcu.script  test.py  testscript.sh  tombstone_parser.sh  ttn.sh  vehicle.sh  vehiclesideloading.sh
(+325 files in other folders)
