INCLUDES = -I$(top_srcdir)/src/dialogs -I$(top_srcdir)/src/dialogs/config -I$(top_srcdir)/src/dialogs/wizard $(all_includes)
METASOURCES = AUTO
libsip_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libsip.la
libsip_la_SOURCES = sipfsm.cpp sipstack.cpp md5digest.cpp
noinst_HEADERS = sipfsm.h sipstack.h md5digest.h
