INCLUDES = -I$(top_srcdir)/src/dialogs -I$(top_srcdir)/src/dialogs/config 	-I$(top_srcdir)/src/dialogs/wizard $(all_includes)
METASOURCES = AUTO
libvideo_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libvideo.la


libvideo_la_SOURCES = webcambase.cpp webcamv4l.cpp webcamimage.cpp
noinst_HEADERS = webcambase.h webcamv4l.h webcamimage.h
